STABLE STATE: UPGRADED SPRING BOOT FROM V3.1.7 TO V3.2.1.
STABLE STATE: UPGRADED SPRING BOOT FROM V3.1.7 TO V3.2.1.