@@ -12,7 +12,7 @@ public class DemoApplication {
       SpringApplication.run(DemoApplication.class, args);
     }
     @GetMapping("/hello")
-    public String hello(@RequestParam(value = "name", defaultValue = "World") String name) {
-      return String.format("Hello %s!", name);
+    public String hello(@RequestParam(defaultValue = "World") String name) {
+      return "Hello %s!".formatted(name);
     }
 }
